--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "fastify-server-version",
   "version": "1.0.1",
   "description": "A Fastify plugin to add server version and last commit to respose header",
+  "type": "module",
   "main": "serverVersion.js",
   "scripts": {
-    "test": "tap --reporter=list --watch"
+    "test": "tap --reporter=list"
   },
   "author": "Amit Tal",
   "license": "Apache-2.0",
@@ -15,15 +16,13 @@
     "request"
   ],
   "dependencies": {
-    "fastify-plugin": "^3.0.0"
+    "fastify-plugin": "^5.0.1"
   },
   "devDependencies": {
-    "eslint": "^7.30.0",
-    "eslint-plugin-prettierx": "^0.18.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "fastify": "^3.24.1",
-    "jest": "^27.4.3",
-    "mock-fs": "^5.1.2",
-    "tap": "^15.1.5"
+    "@biomejs/biome": "^2.2.4",
+    "fastify": "^5.6.0",
+    "jest": "^30.1.3",
+    "mock-fs": "^5.5.0",
+    "tap": "^21.1.0"
   }
 }
