--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   ],
   "dependencies": {
     "debug": "^4.4.3",
-    "fastify-plugin": "^5.0.1"
+    "fastify-plugin": "^5.0.1",
+    "git-commit-info": "^2.0.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
