--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "serverVersion.js",
   "scripts": {
-    "test": "tap --reporter=list"
+    "test": "tap"
   },
   "author": "Amit Tal",
   "license": "Apache-2.0",
@@ -17,12 +17,12 @@
   ],
   "dependencies": {
     "debug": "^4.4.3",
-    "fastify-plugin": "^5.0.1",
-    "git-commit-info": "^2.0.2"
+    "fastify-plugin": "^5.1.0",
+    "git-last-commit-hash": "^1.0.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.2.4",
-    "fastify": "^5.6.0",
-    "tap": "^21.1.0"
+    "@biomejs/biome": "^2.2.5",
+    "fastify": "^5.6.1",
+    "tap": "^21.1.1"
   }
 }
